# rust-tweet

./: Cargo.toml  Rocket.toml
db/: db.sqlite  db.sqlite-shm  db.sqlite-wal  schema.sql
src/: database.rs  main.rs
static/: base.html.tera  create_tweet.html.tera  index.html.tera  logged_in.html.tera  tweet.html.tera
