[package]
name = "rust-tweet"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "1.4.4", features = ["sqlite", "r2d2"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0.144"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
features = ["diesel_sqlite_pool"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]